Bug fixes 12.02.2025
Bug fixes 12.02.2025